--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -8,5 +8,19 @@
 </head>
 <body>
     <h1>Things I need to do:</h1>
+    <table>
+        {% for item in items %}
+            <tr>
+                {% if item.done %}
+                    <td><strike>{{ item.name }}</td></strike>
+                {% else %}
+                    <td>{{ item.name }}</td>
+                {% endif %}
+            </tr>
+        {% empty %}
+        <tr><td>You Have Nothing to do</td></tr>
+        {% endfor %}
+    </table>
+    <a href="/add">Add an Item</a>
 </body>
 </html>
